@@ -40,19 +40,51 @@ class ProgressBar;
 class Skill_Tab : public GCContainer, public gcn::ActionListener
 {
     public:
+        /**
+         * The type of this skill tab
+         */
         const std::string type;
+
+        /**
+         * Constructor
+         */
         Skill_Tab(std::string type);
+
+        /**
+         * Update this tab
+         */
         void update();
+
+        /**
+         * Called when receiving actions from widget.
+         */
         void action(const gcn::ActionEvent &event) {}
-        
-    protected:
-    
+
+    private:
+         /**
+         * Update the information of a skill at
+         * the given index
+         */
+        void updateSkill(int index);
+
+        /**
+         * Gets the number of skills in this particular
+         * type of tab.
+         */
+        int getSkillNum();
+
+        /**
+         * Get the first enumeration of this skill tab's
+         * skill type.
+         */
+        int getSkillBegin();
+
         std::vector<gcn::Label *> mSkillNameLabels;
         std::vector<gcn::Label *> mSkillLevelLabels;
         std::vector<gcn::Label *> mSkillExpLabels;
         std::vector<ProgressBar *> mSkillProgress;
-};     
-        
+};
+
 
 /**
  * The skill dialog.
@@ -72,18 +104,26 @@ class SkillDialog : public Window, public gcn::ActionListener
          */
         ~SkillDialog();
 
+        /**
+         * Called when receiving actions from widget.
+         */
         void action(const gcn::ActionEvent &event);
 
+        /**
+         * Update the tabs in this dialog
+         */
         void update();
 
-        void setExp(int id, int exp);
-
+        /**
+          * Draw this window.
+          */
         void draw(gcn::Graphics *g);
 
     private:
-    
+
+
         std::list<Skill_Tab*> mTabs;
-        
+
 };
 
 
