@@ -337,7 +337,12 @@ class LocalPlayer : public Player
 
         void setExperience(int skill, int current, int next);
 
-        static const std::string& getSkillName(int skill);
+        struct skillInfo {
+            std::string name;
+            std::string icon;
+        };
+
+        static const struct skillInfo& getSkillInfo(int skill);
 
         std::pair<int, int> getExperience(int skill);
 
